--- a/intermediate_challenge.ipynb
+++ b/intermediate_challenge.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "intermediate-challenge.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNq3WtPx2VDl83atSiALgGH",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,11 +17,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/hrushabh8899/intermediate-challenge/blob/master/intermediate_challenge.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "xieD8ehvnEDe",
         "colab_type": "text"
       },
       "source": [
-        "User-defined Functions :\n"
+        "User-defined Functions : \n",
+        "\n",
+        "fact() calculates the factorial of a given number passed to it during a function call\n"
       ]
     },
     {
@@ -67,7 +81,9 @@
         "colab_type": "text"
       },
       "source": [
-        "map() :"
+        "map() :\n",
+        "\n",
+        "It is used to map an array of inputs to a given function (fact() in this case) to produce an output for every array element passed to it. "
       ]
     },
     {
@@ -104,7 +120,9 @@
         "colab_type": "text"
       },
       "source": [
-        "split():"
+        "split():\n",
+        "\n",
+        "It is used to split the given input based on a particular delimiter, ':' in this case"
       ]
     },
     {
@@ -142,7 +160,9 @@
       },
       "source": [
         "lambda():\n",
-        "  1. lambda() as a stand-alone function:"
+        "  1. lambda() as a stand-alone function:\n",
+        "\n",
+        "  A lambda() function, also known as an anonymous function, consists of a single expression. It needs no return statement as it returns the value of the expression for the given input by default. "
       ]
     },
     {
@@ -180,7 +200,8 @@
       },
       "source": [
         "  2. lambda() + map():\n",
-        "  "
+        "  \n",
+        "  In this code snippet, the input array 'li' is mapped onto a lambda function which returns the square of the input number."
       ]
     },
     {
@@ -216,7 +237,9 @@
         "colab_type": "text"
       },
       "source": [
-        "  3. lambda() + filter()"
+        "  3. lambda() + filter():\n",
+        "\n",
+        "  In this code snippet, the list 'li' is filtered based on a lambda function, which filters only even numbers"
       ]
     },
     {
@@ -253,7 +276,9 @@
         "colab_type": "text"
       },
       "source": [
-        "NumPy:"
+        "NumPy:\n",
+        "\n",
+        "In this section, various basic functionalities of NumPy like array creation, indexing, slicing etc have been shown, with appropriate comments wherever necessary."
       ]
     },
     {
@@ -318,7 +343,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Saving and Loading NumPy Array :"
+        "Saving and Loading NumPy Array :\n",
+        "\n",
+        "np.save() saves a numpy array with a .npy extension onto the local disk, whereas np.load() loads the array from the local disk."
       ]
     },
     {
@@ -357,7 +384,9 @@
       },
       "source": [
         "Pandas :\n",
-        "  1. Reading .csv files from local drive"
+        "  1. Reading .csv files from local drive\n",
+        "\n",
+        "  files.upload() is used to upload a file from the local disk to google colab. To convert it into a dataframe, the 'io' module is used as shown."
       ]
     },
     {
@@ -466,7 +495,9 @@
         "colab_type": "text"
       },
       "source": [
-        "2. Writing .csv files to local drive"
+        "2. Writing .csv files to local drive :\n",
+        "\n",
+        "df.to_csv() converts a given dataframe into a csv file"
       ]
     },
     {
@@ -492,7 +523,11 @@
         "colab_type": "text"
       },
       "source": [
-        "3. Series :"
+        "3. Series :\n",
+        "\n",
+        " Pandas Series is a one dimensional labelled array capable of holding data of  various types (i.e., int, float, string etc). It is basically like a column in Excel.\n",
+        "\n",
+        " In the subsequent code cells, it is shown how a Series is created using various indexing methods and using various data structures in python. "
       ]
     },
     {
@@ -626,7 +661,9 @@
         "colab_type": "text"
       },
       "source": [
-        "4. DataFrame : "
+        "4. DataFrame : \n",
+        "\n",
+        "  A Pandas DataFrame is a two-dimensional size-mutable and heterogeneous structure with labelled axes (rows and columns). In the code snippet below, various methods of creating a dataframe are demonstrated"
       ]
     },
     {
@@ -755,7 +792,11 @@
         "colab_type": "text"
       },
       "source": [
-        "Matplotlib :\n"
+        "Matplotlib :\n",
+        "\n",
+        "  It is a plotting library in python which makes it easy to plot relation between quantities through its object-oriented API.\n",
+        "\n",
+        "  The following plot is created using matplotlib and seaborn, which is basically a more advanced version of matplotlib. All the graphs are plotted based on the titanic dataset which can be found on kaggle.\n"
       ]
     },
     {
@@ -861,7 +902,11 @@
         "colab_type": "text"
       },
       "source": [
-        "OpenCV :"
+        "OpenCV :\n",
+        "\n",
+        "It is a library of functions which mainly deal with Computer Vision.\n",
+        "\n",
+        "Below is an example of how one can load, save, resize, crop, rotate images using OpenCV"
       ]
     },
     {
@@ -984,7 +1029,6 @@
         }
       },
       "source": [
-        "#img = cv2.imread(\"lenna.png\")\n",
         "x,y,h,w = 100,100,500,500\n",
         "crop_img = img[y:y+h, x:x+w]\n",
         "plt.imshow(crop_img)\n",
@@ -1006,29 +1050,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "K2kKM9qgIT8c",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "cap = cv2.VideoCapture('test.mp4')\n",
-        "while(cap.isOpened()):\n",
-        "    ret, frame = cap.read()\n",
-        "    if not ret:\n",
-        "      break\n",
-        "    cv2_imshow(frame)\n",
-        "       \n",
-        "    cv2.waitKey(1)  & 0xFF\n",
-        "    \n",
-        "cap.release()\n",
-        "cv2.destroyAllWindows()"
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
