--- a/Week2/Week2.ipynb
+++ b/Week2/Week2.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Week2.ipynb",
+      "name": "Untitled",
       "provenance": [],
-      "authorship_tag": "ABX9TyPp7wtCir86O1epLYqRHxxD",
+      "authorship_tag": "ABX9TyPA98C0Jsl6yjZkbUco54Di",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +22,45 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/hrushabh8899/intermediate-challenge/blob/master/Week2/Week2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_l8CQIkFf9zu",
+        "colab_type": "code",
+        "outputId": "9cb1b01e-1e0e-4c31-b80a-88e0f77a66df",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        }
+      },
+      "source": [
+        "!mkdir \"data_folder\"\n",
+        "%cd \"/content/data_folder\"\n",
+        "\n",
+        "!wget https://www.kaggle.com/quantbruce/real-estate-price-prediction"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/data_folder\n",
+            "--2020-04-25 08:42:30--  https://www.kaggle.com/quantbruce/real-estate-price-prediction\n",
+            "Resolving www.kaggle.com (www.kaggle.com)... 35.244.233.98\n",
+            "Connecting to www.kaggle.com (www.kaggle.com)|35.244.233.98|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘real-estate-price-prediction’\n",
+            "\n",
+            "real-estate-price-p     [ <=>                ]  61.76K  --.-KB/s    in 0.1s    \n",
+            "\n",
+            "2020-04-25 08:42:30 (452 KB/s) - ‘real-estate-price-prediction’ saved [63246]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -413,7 +452,7 @@
         "iris_dataset.rename(columns={0: 'class'}, inplace=True)\n",
         "iris_dataset.head()"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -546,7 +585,7 @@
         "train_set, test_set = train_test_split(iris_dataset)\n",
         "len(train_set), len(test_set)"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +634,7 @@
         "actual = np.array(test_set)[:, -1]\n",
         "knn.evaluate(actual, preds)"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -802,11 +841,11 @@
       "metadata": {
         "id": "xJf9jxMkE3Ml",
         "colab_type": "code",
+        "outputId": "c1f0065f-878a-42b5-d15c-e7f7f6355815",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "c1f0065f-878a-42b5-d15c-e7f7f6355815"
+        }
       },
       "source": [
         "#tester code for KMeans\n",
@@ -825,7 +864,7 @@
         "\n",
         "k.plot()\n"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
